<resources>
    <string name="app_name">AutoSettings</string>

    <string name="pref_header_general">General</string>
    <string name="pref_header_sound">Sound</string>
    <string name="pref_header_radio">Radio</string>
    <string name="pref_header_screen">Screen</string>
    <string name="pref_header_touch">Touch panel</string>
    <string name="pref_header_other">Other</string>
    <string name="pref_header_info">System information</string>

    <string name="pref_general_generalheader">General</string>
    <string name="pref_general_beep_title">Beep</string>
    <string name="pref_general_boottime_title">Boot Time</string>
    <string name="pref_general_playing_video_title">Play Video While Driving</string>
    <string name="pref_general_playing_video_summary">Enables or disables of playing video content while driving. Device must be connected to handle brake of your car.</string>
    <string name="pref_general_shortcut_touch_state_title">Shortcut Touch State</string>
    <string name="pref_general_switch_media_status_title">Switch Media Status</string>

    <string name="pref_general_rearviewheader">Rear View Camera</string>
    <string name="pref_general_rearview_title">Rear View Camera</string>
    <string name="pref_general_rearview_summary">Enables switching to rear camera view when rear drive activated</string>
    <string name="pref_general_mirror_rearview_title">Mirror Rear View Image</string>
    <string name="pref_general_mirror_rearview_summary">Horrizontally mirrors image of rear view camera</string>
    <string name="pref_general_rearview_audio_title">Disable Audio</string>
    <string name="pref_general_rearview_audio_summary">Disables sound when rear view camera is on</string>

    <string name="pref_general_swcheader">Steering Wheel Control</string>
    <string name="pref_general_swctype_title">SWC Type</string>
    <string name="pref_general_swctype_summary">Resistant: %1$s</string>

    <string name="pref_general_usbheader">USB</string>
    <string name="pref_general_usb0_type_title">USB0 Type</string>
    <string name="pref_general_usb1_type_title">USB1 Type</string>

    <string name="pref_general_otherheader">Other</string>
    <string name="pref_general_testmode_title">Test Mode</string>

    <string-array name="general_boottime_names">
        <item>Every time</item>
        <item>2 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>

    <string-array name="general_swctype_names">
        <item>1K</item>
        <item>10K</item>
        <item>20K</item>
    </string-array>

    <string name="pref_sound_volumeheader">General volume</string>
    <string name="pref_sound_volume_title">Volume level</string>

    <string name="pref_sound_balanceheader">Balance</string>
    <string name="pref_sound_balance_title">Left - Right balance</string>
    <string name="pref_sound_fade_title">Front - Rear balance</string>

    <string name="pref_sound_eqheader">Equalizer</string>
    <string name="pref_sound_eq_title">Equalizer settings</string>
    <string name="pref_sound_eq_presets">Presets</string>
    <string name="pref_sound_eq_summary">Current preset: %1$s Subwoofer %5$d</string>
    <string name="pref_sound_eq_summarycustom">Current preset: %1$s Bass: %2$d Middle: %3$d Treble: %4$d Subwoofer: %5$d</string>
    <string name="pref_sound_bass">Bass</string>
    <string name="pref_sound_middle">Middle</string>
    <string name="pref_sound_treble">Treble</string>
    <string name="pref_sound_subwoofer">Subwoofer</string>
    <string name="pref_sound_loudmode">Loud mode</string>
    <string name="pref_sound_volume_offset">Volume offset</string>
    <string name="pref_sound_volume_offset_summary">Value: %1$s</string>

    <string-array name="sound_equalizer_presets_names">
        <item>Custom</item>
        <item>Jazz</item>
        <item>Pop</item>
        <item>Classic</item>
        <item>Rock</item>
        <item>News</item>
        <item>City</item>
        <item>Electronic</item>
        <item>Movie</item>
        <item>Techno</item>
    </string-array>

    <string name="pref_radio_regionheader">Region settings</string>
    <string name="pref_radio_region_title">Region</string>
    <string name="pref_radio_region_summary">AM %1$dkHz - %2$dkHz step %3$dkHz, FM %4$.2fMHz - %5$.2fMHz step %6$.2fMHz</string>

    <string-array name="radio_regions_names">
        <item>USA</item>
        <item>Europe</item>
        <item>Latin america</item>
        <item>East Europe (OIRT)</item>
        <item>China</item>
        <item>Japan</item>
    </string-array>

    <string name="pref_screen_brightnessheader">Brightness / Contrast</string>
    <string name="pref_screen_brightness_title">Brightness</string>
    <string name="pref_screen_contrast_title">Contrast</string>

    <string name="pref_screen_illuminationheader">Illumination</string>
    <string name="pref_screen_hue_title">Hue</string>
    <string name="pref_screen_saturation_title">Saturation</string>
    <string name="pref_screen_value_title">Brightness</string>
    <string name="pref_screen_detect_title">Detect illumination</string>
    <string name="pref_screen_illumination_color_title">Color</string>

    <string name="pref_info_carnumber_title">Car number</string>
    <string name="pref_info_emmc_title">EMMC ID</string>
    <string name="pref_info_mcu_title">MCU version</string>
    <string name="pref_info_can_title">CAN version</string>
    <string name="pref_info_bt_title">Bluetooth version</string>
    <string name="pref_info_system_title">System version</string>



    <string name="pref_sound_beep">Beep</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
