<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingEnd="5dp"
            android:paddingStart="20dp"
            android:text="@string/pref_sound_bass"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <SeekBar
            android:id="@+id/seekBarBass"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:max="10"
            android:progress="3" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingEnd="5dp"
            android:paddingStart="20dp"
            android:text="@string/pref_sound_middle"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <SeekBar
            android:id="@+id/seekBarMiddle"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:max="10"
            android:progress="3" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingEnd="5dp"
            android:paddingStart="20dp"
            android:text="@string/pref_sound_treble"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <SeekBar
            android:id="@+id/seekBarTreble"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:max="10"
            android:progress="3" />
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingEnd="5dp"
            android:paddingStart="20dp"
            android:text="@string/pref_sound_subwoofer"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <SeekBar
            android:id="@+id/seekBarSubwoofer"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:max="10"
            android:progress="3" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/pref_sound_eq_presets"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Spinner
        android:id="@+id/spinnerPresets"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:entries="@array/sound_equalizer_presets_names"
        android:spinnerMode="dropdown" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

</LinearLayout>